# django-xml

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
djxml/: __init__.py
djxml/tests/: settings.py  test_advanced_example.py  test_examples.py  xmlmodels.py
djxml/xmlmodels/: __init__.py  base.py  decorators.py  descriptors.py  exceptions.py  fields.py  loading.py  options.py  related.py  signals.py  utils.py
djxml/xmlmodels/fields/: __init__.py  base.py  related.py  utils.py  xpath.py  xslt.py
docs/: advanced_example.md
tests/: settings.py  test_advanced_example.py  test_examples.py  xmlmodels.py
tests/data/: atom2rss.xsl  atom_feed.xml
