
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "django-xml"
description = "Provides an abstraction to lxml's XPath and XSLT functionality in a manner resembling django database models"
license = "BSD-2-Clause"
authors = [{ name = "The Atlantic", email = "programmers@theatlantic.com" }]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["readme", "version"]
dependencies = ["Django>=2.2", "python-dateutil", "lxml"]

[tool.setuptools]
zip-safe = false
platforms = ["any"]
packages = ["djxml"]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "djxml.__version__" }
readme = { file = ["README.md"] }

[tool.flake8]
max-line-length = 100
line-length = 99

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]
